# bayesbeat

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  bayes_beat.submit  environment.yml  pyproject.toml  run_nessai.py  submit_run.sh  test_model.ipynb
.github/workflows/: lint.yml  tests.yml
examples/simulated_data/: README.md  simulated_data.ini
scripts/G&H_30070698-08_suspension_2/: data_recover_analytic_general.ini
scripts/LS_SUS1/: data_recover_analytic_general.ini
scripts/real_data/: README.md  data_recover_analytic_general.ini
scripts/simulated_data/: gaussian_beam.ini  gaussian_beam_recover_analytic_general.ini
src/bayesbeat/: __init__.py  analysis.py  condor.py  conversion.py  data.py  filter.py  model.py  plot.py  priors.py  result.py  utils.py
src/bayesbeat/analytic_solve/: generic_model.py
src/bayesbeat/cli/: build.py  config.py  generate.py  plot.py  priors.py  run.py
src/bayesbeat/config/: __init__.py  config.py  default.ini  htcondor.ini  slurm.ini
src/bayesbeat/equations/: General_Equation_1_Terms.txt  General_Equation_2_Terms.txt  General_Equation_3_Terms.txt  General_Equation_4_Terms.txt  General_Equation_5_Terms.txt  General_Equation_6_Terms.txt  General_Equation_7_Terms.txt  coefficients.py  functions.py
src/bayesbeat/model/: __init__.py  analytic.py  base.py  beam.py  generic_analytic.py  simple.py  utils.py
src/bayesbeat/reparameterisations/: __init__.py  amplitude.py
src/bayesbeat/submit/: condor.py  slurm.py
tests/: test_utils.py
tests/test_cli/: test_create_ini.py
tests/test_equations/: test_coefficients.py
